@@ -1,3 +1,12 @@
+2003-11-08  Eric A. Welsh <ewelsh@ccb.wustl.edu>
+
+	* timidity/timidity.c (parse_opt_p): max voices to be changeable
+	(timidity_init_player): ditto.
+	* timidity/mac_dlog.c (mac_SetPlayOption): ditto.
+	* timidity/playmidi.h (max_voices): Add.
+	* timidity/playmidi.c (max_voices): Add.
+	* timidity/timidity.h (MAX_VOICES): Delete.
+
 2003-11-06  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* timidity/playmidi.c, timidity/tables.c:
@@ -9,12 +18,12 @@
 
 2003-11-05  mput <root@mput.dip.jp>
 
-	* timidity/readmidi.c: reindent.
+	* timidity/readmidi.c: Reindent.
 
 2003-11-04  Eric A. Welsh <ewelsh@ccb.wustl.edu>
 
 	* timidity/readmidi.c (set_xg_reverb_type): Add.
-	  (parse_sysex_event_multi): Support for XG SysEx. reverb/chorus types
+	(parse_sysex_event_multi): Support for XG SysEx. reverb/chorus types
 
 2003-11-01  Saito <saito2@digitalme.com>
 
